--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,8 @@
 @use './styles/global-colors' as *;
+@use './styles/global-fonts' as *;
 
 * {
+    font-family: sans-serif;
     scroll-behavior: smooth;
     box-sizing: border-box;
     margin: 0;
@@ -8,6 +10,15 @@
 }
 
 body {
-    background-color: aliceblue;
     background-color: $main-color-black;
+}
+
+button {
+    border-style: none;
+    background-color: transparent;
+}
+
+a {
+    color: $main-color-black;
+    text-decoration: none;
 }
