--- a/src/app/desktop/desktop.component.html
+++ b/src/app/desktop/desktop.component.html
@@ -1,8 +1,10 @@
-<app-header></app-header>
-<app-navbar></app-navbar>
-<app-why-me></app-why-me>
-<app-my-skills></app-my-skills>
-<app-my-projects></app-my-projects>
-<app-need-a-teamplayer></app-need-a-teamplayer>
-<app-contact-me></app-contact-me>
-<app-footer></app-footer>
+<app-header id="navHeader"/>
+<app-navbar/>
+
+<app-why-me id="navWhy"/>
+<app-my-skills id="navSkills"/>
+<app-my-projects id="navProjects"/>
+<app-need-a-teamplayer/>
+<app-contact-me id="navContact"/>
+
+<app-footer/>
