add header right site

--- a/src/app/desktop/header/header.component.html
+++ b/src/app/desktop/header/header.component.html
@@ -1,1 +1,40 @@
-<p>header works!</p>
+<section>
+    <header>
+        <div class="header-left">a</div>
+        <div class="header-right">
+            <div>
+                <div class="right-logo">
+                    <figure>
+                        <hr>
+                        <img src="img/logos/logo.svg" alt="logo">
+                    </figure>
+                    <div class="right-icon-bar">
+                        <figure>
+                            <a href="#">
+                                <img src="img/buttons/email_button.svg" alt="email_button">
+                            </a>
+                            <a href="#">
+                                <img src="img/buttons/github_button.svg" alt="github_button">
+                            </a>
+                            <a href="#">
+                                <img src="img/buttons/linkedin_button.svg" alt="linkedin_button">
+                            </a>
+                        </figure>
+                    </div>
+                </div>
+                <div class="right-headline">
+                    <h1>Dominik Mozelt</h1>
+                    <h2>Frontend Developer</h2>
+                </div>
+                <div class="right-btn">
+                    <figure>
+                        <hr>
+                        <a href="#navWhy">
+                            <img src="img/buttons/arrow_down_button.svg" alt="arrow_down_button">
+                        </a>
+                    </figure>
+                </div>
+            </div>
+        </div>
+    </header>
+</section>
