--- a/src/styles/_global-fonts.scss
+++ b/src/styles/_global-fonts.scss
@@ -1,4 +1,9 @@
 @font-face {
+    font-family: 'Anta';
+    src: url('../assets/fonts/Anta/Anta-Regular.ttf') format('truetype');
+}
+
+@font-face {
     font-family: 'Josefin Sans';
     src: url('../assets/fonts/Josefin_Sans/JosefinSans-VariableFont_wght.ttf') format('truetype');
 }
