--- a/src/app/desktop/navbar/navbar.component.html
+++ b/src/app/desktop/navbar/navbar.component.html
@@ -2,7 +2,7 @@
     <nav>
         <figure class="logo">
             <a href="#navHeader">
-                <img src="img/logos/logo_dark_mob.svg" alt="logo_dark_mob">
+                <img src="img/logos/logo_dark.svg" alt="logo_dark">
             </a>
         </figure>
         <div>
