--- a/src/styles/_global-colors.scss
+++ b/src/styles/_global-colors.scss
@@ -2,6 +2,7 @@
 $main-color-black: #262E34;
 $main-color-lightblue: #89BCD9;
 $main-color-white: #F8F5EC;
+$main-color-white-hover: #F8F5EC1F;
 $main-color-lightgray: #262E341F;
 $main-color-lightred: #E44C36;
 $main-color-lightgreen: #97E163;
