add main section why me

--- a/src/app/desktop/header/header.component.html
+++ b/src/app/desktop/header/header.component.html
@@ -18,18 +18,21 @@
                         <div>
                             <figure class="right-icon-bar-item">
                                 <img src="img/logos/email_logo.svg" alt="email_logo">
-                                <a href="google.com">
+                                <!-- No Link Ref -->
+                                <a href="#">
                                     <img src="img/logos/email_logo_hover.svg" alt="email_logo_hover">
                                 </a>
                             </figure>
                             <figure class="right-icon-bar-item">
                                 <img src="img/logos/github_logo.svg" alt="github_logo">
+                                <!-- No Link Ref -->
                                 <a href="#">
                                     <img src="img/logos/github_logo_hover.svg" alt="github_logo_hover">
                                 </a>
                             </figure>
                             <figure class="right-icon-bar-item">
                                 <img src="img/logos/linkedin_logo.svg" alt="linkedin_logo">
+                                <!-- No Link Ref -->
                                 <a href="#">
                                     <img src="img/logos/linkedin_logo_hover.svg" alt="linkedin_logo_hover">
                                 </a>
