add main component

--- a/src/app/desktop/desktop.component.html
+++ b/src/app/desktop/desktop.component.html
@@ -1,10 +1,6 @@
-<app-header id="navHeader"/>
-<app-navbar/>
-
-<app-why-me id="navWhy"/>
-<app-my-skills id="navSkills"/>
-<app-my-projects id="navProjects"/>
-<app-need-a-teamplayer/>
-<app-contact-me id="navContact"/>
-
-<app-footer/>
+<section>
+    <app-header id="navHeader" />
+    <app-navbar />
+    <app-main />
+    <app-footer />
+</section>
