--- a/src/app/desktop/main/why-me/why-me.component.html
+++ b/src/app/desktop/main/why-me/why-me.component.html
@@ -5,7 +5,7 @@
         </div>
         <div class="container">
             <figure class="c-left">
-                <img src="img/main/position_icon.svg" alt="position_icon">
+                <img src="img/main/icons/position.svg" alt="position">
                 <figcaption>
                     <span>
                         <span>{{ this.app.main.sections.why_me.left_container.first_text }}</span>
