--- a/src/app/desktop/main/why-me/why-me.component.scss
+++ b/src/app/desktop/main/why-me/why-me.component.scss
@@ -3,23 +3,23 @@
 @use '../../../../styles/globle-mixin' as *;
 
 section {
-    
+    user-select: none;
+
     @include flex();
 }
 
 .whyMe {
     width: 980px;
-    height: 307px;
     max-width: 980px;
-    max-height: 307px;
 
-    @include flex($fd: column);
+    @include flex($fd: column, $g: 64px);
 }
 
 .headline {
     flex: 1;
 
     >h3 {
+        user-select: text;
 
         @include font($c: $main-color-lightblue, $fw: 400, $fs: 60px, $ff: 'Anta');
     }
@@ -45,6 +45,7 @@ section {
         }
 
         >span {
+            user-select: text;
 
             @include font($c: $main-color-white, $fw: 700, $fs: 30px, $ff: 'Josefin Sans');
 
@@ -58,10 +59,11 @@ section {
 .c-right {
     flex: 1;
     height: 100%;
-    
+
     @include flex($fd: column, $jc: space-between, $ai: flex-end);
 
     >p {
+        user-select: text;
 
         @include font($c: $main-color-white, $fw: 400, $fs: 18px, $ff: 'Josefin Sans');
     }
