--- a/src/app/desktop/navbar/navbar.component.html
+++ b/src/app/desktop/navbar/navbar.component.html
@@ -1,6 +1,7 @@
 <section>
     <nav>
-        <figure class="logo">
+        <div>
+            <figure class="logo">
             <a href="#navHeader">
                 <img src="img/logos/logo_dark.svg" alt="logo_dark">
             </a>
@@ -26,6 +27,7 @@
                 <span>{{ lang }}</span>
             </button>
             }
+        </div>
         </div>
     </nav>
 </section>
